# ntfy-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  Makefile  NOTICE  README.md  README.rst  full_doctree.txt  pyproject.toml  requirements-all.txt  requirements-build.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  test.py  test2.py  vercheck.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: tests.yml
docs/: Makefile  api.rst  conf.py  index.rst  internals.rst  requirements.txt
docs/_misc/: __init__.py  patches.py
docs/_misc/ext/: autoalias.py  autocvar.py  autoivar.py  autotvar.py  coverage.py  dataref.py  utils.py  viewcode_outdir.py
docs/_static/styles/: field-list-header.css  multiline-sigs.css  paramlink-prefix.css  sig-param-color.css
src/ntfy_api/: __init__.py  __package_info__.py  __version__.py  _internals.py  _url.py  actions.py  client.py  creds.py  enums.py  errors.py  filter.py  message.py  publisher.py  subscription.py
src/ntfy_api/publisher/: __init__.py  message.py  ntfy_publisher.py
src/ntfy_api/subscriber/: __init__.py  message.py  ntfy_subscriber.py
tests/: test_actions.py  test_client_misc.py  test_client_poll.py  test_client_publish.py  test_client_subscribe.py  test_creds.py  test_filter.py  test_internals_queue.py  test_internals_url.py  test_message.py  test_subscription.py
tests/mocks/: __init__.py  httpx.py  instance_cache.py  websockets.py
tests/responses/: invalid.txt  received_delay.txt  received_empty.txt  received_local_attachment.txt  received_long.txt  received_open.txt  received_templating.txt  sent_error.txt
